--- a/client/src/Components/Pages/CreateListing.css
+++ b/client/src/Components/Pages/CreateListing.css
@@ -450,3 +450,184 @@
             .createListingBody2FooterButton:hover {
                 background-color: black;
             }
+
+/* ---------------------------------------------------------------------------------------------- */
+
+    .createListingBody3 {
+        min-height: 600px;
+        height: calc(100vh - 100px);
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+        .createListingSubBody3 {
+            height: 100%;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 0 300px;
+            padding-bottom: 100px;
+        }
+
+            .createListingSubBody3Title {
+                height: 80px;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+                font-size: 32px;
+                font-weight: bold;
+            }
+
+            .createListingSubBody3List {
+                height: 200px;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+            }
+
+                .createListingSubBody3ListOption {
+                    height: 100px;
+                    width: 200px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: flex-start;
+                    border: 1px solid rgba(160, 160, 160, 0.35);
+                    border-radius: 10px;
+                    padding: 10px 20px;
+                    cursor: pointer;
+                    transition: 0.1s linear;
+                }
+
+                .createListingSubBody3ListOption:hover {
+                    transition: 0.1s linear;
+                    border: 2px solid var(--black);
+                }
+
+                    .fa-solid.fa-house.createListingSubBody3ListOptionIcon {
+                        font-size: 26px;
+                        margin-bottom: 10px;
+                        margin-left: 4px;
+                    }
+
+                    .fa-solid.fa-building.createListingSubBody3ListOptionIcon {
+                        font-size: 26px;
+                        margin-bottom: 10px;
+                        margin-left: 4px;
+                    }
+
+                    .fa-solid.fa-hotel.createListingSubBody3ListOptionIcon {
+                        font-size: 26px;
+                        margin-bottom: 10px;
+                        margin-left: 4px;
+                    }
+
+                    .createListingSubBody3ListOptionText {
+                        font-size: 16px;
+                        font-weight: bold;
+                    }
+
+        .createListingBody3Footer {
+            height: 86px;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            bottom: 0;
+        }
+
+            .createListingBody3FooterUpper {
+                min-height: 6px;
+                height: 6px;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+            }
+
+                .createListingBody3FooterUpperLine {
+                    height: 100%;
+                    width: 33%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                    background-color: rgba(160, 160, 160, 0.35);
+                    position: relative;
+                }
+
+                    .createListingBody3FooterUpperOverlay1 {
+                        height: 100%;
+                        background-color: var(--black);
+                        width: 100%;
+                        left: -100%;
+                        transition: transform 600ms linear 0s;
+                        transform: translateX(20%);
+                        position: absolute;
+                    }
+                    .createListingBody3FooterUpperOverlay2 {
+                        height: 100%;
+                        background-color: var(--black);
+                    }
+                    .createListingBody3FooterUpperOverlay3 {
+                        height: 100%;
+                        background-color: var(--black);
+                    }
+
+            .createListingBody3FooterLower {
+                height: calc(100% - 6px);
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                padding: 0 50px;
+            }
+
+            .createListingBody3FooterBackText {
+                font-size: 16px;
+                font-weight: bold;
+                text-decoration: underline;
+                cursor: pointer;
+                height: 40px;
+                border-radius: 10px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 0 10px;
+            }
+
+            .createListingBody3FooterBackText:hover {
+                background-color: rgba(240, 240, 240, 0.5);
+            }
+
+            .createListingBody3FooterButton {
+                height: 50px;
+                width: 100px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                background-color: var(--black);
+                color: white;
+                border-radius: 10px;
+                font-size: 16px;
+                font-weight: bold;
+                cursor: pointer;
+            }
+
+            .createListingBody3FooterButton:hover {
+                background-color: black;
+            }
