--- a/client/src/Components/Pages/CreateListing.css
+++ b/client/src/Components/Pages/CreateListing.css
@@ -743,7 +743,7 @@
                 align-items: center;
             }
 
-                .fa-location-dot {
+                .fa-soli.fa-location-dot.fld {
                     font-size: 22px;
                     position: absolute;
                     left: 40px;
@@ -978,4 +978,101 @@
                 justify-content: center;
                 align-items: center;
                 border-radius: 10px;
+            }
+
+/* ---------------------------------------------------------------------------------------------- */
+
+.createListingBody7 {
+    min-height: 600px;
+    height: calc(100vh - 100px);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+    .createListingSubBody7 {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0 300px;
+        padding-bottom: 200px;
+    }
+
+        .createListingSubBody7Header {
+            height: 150px;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            margin-bottom: 10px;
+        }
+
+            .createListingSubBody7Header1 {
+                font-size: 32px;
+                font-weight: bold;
+                margin-bottom: 15px;
+            }
+
+            .createListingSubBody7Header2 {
+                font-size: 17px;
+                color: var(--gray);
+            }
+
+        .createListingSubBody7MapContainer {
+            height: 90%;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+        }
+
+            .createListingSubBody7MapAddress {
+                height: 70px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                background-color: white;
+                border-radius: 50px;
+                z-index: 100;
+                top: 70px;
+                padding: 10px 30px;
+                box-shadow: 0 0 15px rgba(97, 97, 97, 0.4);
+                user-select: none;
+            }
+
+                .fa-solid.fa-location-dot.createListingSubBody7MapAddressIcon {
+                    height: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 22px;
+                    margin-right: 20px;
+                    user-select: none;
+                }
+
+                .createListingSubBody7MapAddressText {
+                    font-size: 16px;
+                    font-weight: bold;
+                    user-select: none;
+                }
+
+            .createListingSubBody7Map {
+                height: 100%;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                border-radius: 20px;
             }
